# SynapseQA

./: .env.example  .gitignore  Makefile  Makefile.mk  README.md  build_and_start_prod.sh  conftest.py  package-lock.json  pyproject.toml  requirements.in  requirements.txt  start_dev.sh
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/modal/: Modal.css  Modal.jsx
frontend/src/components/toast/: Toast.css  ToastContainer.jsx
frontend/src/hooks/: useToasts.js
frontend/src/pages/dashboard/: Dashboard.css  Dashboard.jsx
frontend/src/pages/dashboard/components/: AuthStatus.jsx  FilePanel.jsx
frontend/src/pages/dashboard/components/modals/: CreateFingerprintModal.jsx  CreateTestModal.jsx  FileViewerModal.jsx  (+2 more)
frontend/src/pages/dashboard/hooks/: useDashboardData.js
frontend/src/services/: apiService.js
frontend/src/utils/: timeFormatters.js
src/intelli_test/: __init__.py  api.py  schemas.py  security.py  tasks.py
src/intelli_test/routers/: auth.py  files.py  generation.py  settings.py  tests.py
src/intelli_test/utilities/: automatedLogin.py  config.py  create_auth_state.py  genAITestGenerator.py  generateFingerprintFiles.py  imageComparison.py  smartElementFinder.py  testFileGenerator.py
tests/: conftest.py  example_test_ai_generated.py  example_test_login.py  test_ProfileAfterLogin.py  test_ai_generated.py  test_login.py  test_makenamechange.py
utilities/: __init__.py  config.py  genAITestGenerator.py  generateFingerprintFiles.py  htmlSimplifier.py  imageComparison.py
